--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
+    background-color: #3bb7bb;
     margin: 0;
     display: flex;
     align-items: center;
@@ -13,7 +13,7 @@ body {
     text-align: center;
     padding: 20px;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: #cbdbec;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 400px;
   }
