--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #3bb7bb;
+    background-color: #032946bb;
     margin: 0;
     display: flex;
     align-items: center;
@@ -13,8 +13,8 @@ body {
     text-align: center;
     padding: 20px;
     border-radius: 10px;
-    background-color: #cbdbec;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #f2f4f5;
+    box-shadow: 0 0 10px rgba(10, 50, 102, 0.1);
     width: 400px;
   }
   
@@ -34,7 +34,7 @@ body {
   button {
     padding: 8px 15px;
     cursor: pointer;
-    background-color: #4CAF50;
+    background-color: #0d45597d;
     color: white;
     border: none;
     border-radius: 4px;
@@ -46,5 +46,5 @@ body {
   }
   
   button:hover {
-    background-color: #45a049;
+    background-color: #307f9e;
   }
