--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    color: #333;
+    color: #2b2b2b;
   }
   
   .container {
